# dvi-for-bml

./: .gitignore  README.md  eval_script.py  pyproject.toml  requirements.txt  run.py  run.sh  vis_script.py
assets/diagrams/: dvi-np.drawio  gmm-np.drawio  meta-learning.drawio  neural-process.drawio
config/: config.py  config.yaml
contextual-dvi/: context_datasets.py  contextual_distros.py  contextual_gaussian.py  control_function.py  decoder.py  dvi_process.py  encoder.py  exp.ipynb  exp2.ipynb  exp_1d.ipynb  exp_2d.ipynb  exp_bml.ipynb  exp_np.ipynb  model.pth  score_function.py  testing.ipynb  train.py
diagrams/: dvi-np.drawio  gmm-np.drawio  neural-process.drawio  noise-sched-aggr copy.drawio  noise-sched-aggr.drawio  noise-sched-bca.drawio  set-encoder-aggr.drawio  set-encoder-bca.drawio  set-encoder-cross-attn.drawio
models/cnp/: cfg.yaml
notebooks/: eval.ipynb  eval_bml.ipynb  eval_dvi.ipynb  eval_dvinp.ipynb  eval_np.ipynb  exp.ipynb  exp_1d.ipynb  exp_2d.ipynb  exp_bml.ipynb  exp_bml_config.ipynb  exp_bml_load.ipynb  exp_dvi_1d.ipynb  exp_dvi_1d_dds.ipynb  exp_dvi_2d.ipynb  exp_dvi_2d_dds.ipynb  exp_dvinp.ipynb  exp_dvinp_config.ipynb  exp_dvinp_dds.ipynb  exp_np.ipynb  exp_np_config.ipynb  testing.ipynb
pretrained/: cfg.yaml  dvinp.pth
runs/: run.py  run.sh  run_test.sh  test.py
scripts/: .gitignore  exp_2d.py  exp_dvi_1d.py  exp_dvi_2d.py  exp_dvinp.py  exp_np.py  run.py  run.sh  test.ipynb
src/: config.py  contextual_distros.py  contextual_dvi.py  control_function.py  decoder.py  dvi_process.py  encoder.py  train.py  visualize.py
(+233 files in other folders)
