[tool.poetry]
name = "dvi-for-bml"
version = "0.1.0"
description = ""
authors = ["Max Burzer <maxi.burzer@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
numpy = "^2.1.3"
wandb = "^0.18.6"
tqdm = "^4.67.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
types-tqdm = "^4.66.0.20240417"
hydra-core = "^1.3.2"
hydra-submitit-launcher = "^1.2.0"
torch-directml = "^0.2.5.dev240914"
urllib3 = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
